--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,56 +6,9 @@
   display: grid;
   place-items: center;
 
-  .start-container {
-    @extend %component-layout;
-
-    p {
-      font-size: 1.4rem;
-      font-weight: 400;
-      margin-top: 1rem;
-      margin-bottom: 1.5rem;
-    }
-  }
-
-  main {
-    width: min(100%, 55rem);
-    padding: 4rem 7.5rem;
-    margin: 10rem 0;
-    @extend %component-layout;
-
-    .quiz-container {
-      display: flex;
-      flex-direction: column;
-
-      .quiz {
-        &:first-of-type {
-          padding-bottom: 2rem;
-        }
-
-        &:not(:first-of-type) {
-          @extend %border-top;
-        }
-
-        .answers-container {
-          display: flex;
-          gap: 0.8rem;
-          row-gap: 0.5rem;
-          flex-wrap: wrap;
-        }
-      }
-    }
-
-    .submit-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 1.5rem;
-      @extend %border-top;
-
-      p {
-        font-weight: 700;
-        font-size: 1.4rem;
-      }
-    }
+  .task {
+    display: flex;
+    margin-bottom: 1.5rem;
+    gap: 2rem;
   }
 }
