--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -7,4 +7,7 @@ body {
   font-family: "Karla", sans-serif;
   text-align: left;
   background: var(--body-bg);
+  color: var(--text-color-1);
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
 }
