--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,13 +3,50 @@
 #root {
   width: 100%;
   min-height: 100vh;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
 
-  .task {
-    display: flex;
-    margin-bottom: 1.5rem;
-    gap: 2rem;
-    background: var(--task-bg);
+  .container {
+    margin-top: 10.9rem;
+
+    // cover background
+    .bg-cover {
+      width: min(100vw, 150rem);
+      min-height: 30rem;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background: var(--body-mobile-bg-img);
+      background-size: cover;
+      z-index: -1;
+
+      @include desktop {
+        background: var(--body-desktop-bg-img);
+      }
+    }
+
+    // header
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-transform: uppercase;
+
+      h1 {
+        color: white;
+        letter-spacing: 0.46em;
+        font-size: 3.8rem;
+        font-weight: 700;
+      }
+    }
+
+    .task {
+      display: flex;
+      margin-bottom: 1.5rem;
+      gap: 2rem;
+      background: var(--task-bg);
+    }
   }
 }
