--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -2,7 +2,8 @@
   font-size: 62.5%;
 
   --transition-1: 1s;
-  --min-task-height: 6.5rem;
+  --min-task-height: 4.7rem;
+  --border-radius: 0.6rem;
 }
 
 @mixin desktop {
