--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -12,6 +12,15 @@
   }
 }
 
+%checkbox-circle {
+  --size: 2rem;
+  width: var(--size);
+  height: var(--size);
+  border: 0.2rem solid var(--checkbox-empty-inactive);
+  border-radius: 50%;
+  margin-right: 1.7rem;
+}
+
 body {
   font-size: 1.6rem;
   font-family: "Karla", sans-serif;
