--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -2,7 +2,7 @@
   font-size: 62.5%;
 
   --transition-1: 1s;
-  --min-task-height: 4.7rem;
+  --min-task-height: 6.1rem;
   --border-radius: 0.6rem;
 }
 
@@ -19,6 +19,7 @@
   border: 0.2rem solid var(--checkbox-empty-inactive);
   border-radius: 50%;
   margin-right: 1.7rem;
+  cursor: pointer;
 }
 
 body {
