--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -156,6 +156,54 @@
           }
         }
       }
+
+      // footer
+      .nav-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: repeat(2, var(--min-task-height));
+        row-gap: 1.5rem;
+        --padding: 2.3rem;
+        color: var(--text-color-2);
+        font-weight: 700;
+
+        button {
+          background: transparent;
+          color: var(--text-color-2);
+          font-weight: 700;
+          border: none;
+          outline: none;
+          cursor: pointer;
+          text-transform: capitalize;
+
+          &.active-tab {
+            color: var(--text-color-3);
+          }
+        }
+
+        .tabs-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          grid-column: 1 / span 2;
+          grid-row: 2 / span 1;
+          background: var(--task-bg);
+        }
+
+        .clear-completed-btn {
+          text-align: right;
+          padding-right: var(--padding);
+          background: var(--task-bg);
+        }
+
+        p {
+          display: flex;
+          justify-content: baseline;
+          align-items: center;
+          padding-left: var(--padding);
+          background: var(--task-bg);
+        }
+      }
     }
   }
 }
