--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -4,6 +4,7 @@
   --transition-1: 1s;
   --min-task-height: 6.1rem;
   --border-radius: 0.6rem;
+  --box-shadow: 3rem 1rem 10rem 3rem #00000012;
 }
 
 @mixin desktop {
