--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -121,8 +121,10 @@
         border-radius: var(--border-radius) var(--border-radius) 0 0;
 
         .task {
+          width: 100%;
           min-width: 10rem;
           height: var(--min-task-height);
+          flex-basis: 100%;
 
           display: flex;
           align-items: center;
@@ -153,6 +155,10 @@
 
             display: flex;
             align-items: center;
+
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
 
           button {
