--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -50,6 +50,10 @@
       text-transform: uppercase;
       margin-bottom: 1.4rem;
 
+      @include small-screen {
+        padding: 0 1.5rem;
+      }
+
       .theme-switch {
         --size: 3rem;
         width: var(--size);
@@ -124,11 +128,9 @@
           width: 100%;
           min-width: 10rem;
           height: var(--min-task-height);
-          flex-basis: 100%;
 
           display: flex;
           align-items: center;
-          justify-content: baseline;
           gap: 2rem;
 
           border-bottom: 0.1rem solid var(--task-border);
@@ -146,9 +148,8 @@
           h2 {
             margin-right: auto;
             font-weight: 400;
-            font-size: 1.8rem;
+            font-size: var(--font-size-1);
 
-            display: block;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -156,8 +157,8 @@
 
           button {
             --size: 1.8rem;
-            width: var(--size);
-            height: var(--size);
+            min-width: var(--size);
+            min-height: var(--size);
             background: url("../images/icon-cross.svg") center no-repeat,
               transparent;
             border: none;
@@ -185,6 +186,7 @@
           outline: none;
           cursor: pointer;
           text-transform: capitalize;
+          font-size: var(--font-size-2);
 
           &.active-tab {
             color: var(--text-color-3);
@@ -204,6 +206,7 @@
           text-align: right;
           padding-right: var(--padding);
           background: var(--task-bg);
+          font-size: var(--font-size-3);
         }
 
         p {
@@ -212,6 +215,7 @@
           align-items: center;
           padding-left: var(--padding);
           background: var(--task-bg);
+          font-size: var(--font-size-3);
         }
 
         @include desktop {
