--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -5,6 +5,10 @@
   --min-task-height: 6.1rem;
   --border-radius: 0.6rem;
   --box-shadow: 3rem 1rem 10rem 3rem #00000012;
+
+  --font-size-1: clamp(1.4rem, 2.82vw, 1.6rem);
+  --font-size-2: 1.5rem;
+  --font-size-3: 1.1rem;
 }
 
 @mixin desktop {
@@ -13,10 +17,16 @@
   }
 }
 
+@mixin small-screen {
+  @media (max-width: 26em) {
+    @content;
+  }
+}
+
 %checkbox-circle {
   --size: 2rem;
-  width: var(--size);
-  height: var(--size);
+  min-width: var(--size);
+  min-height: var(--size);
   border: 0.2rem solid var(--checkbox-empty-inactive);
   border-radius: 50%;
   margin-right: 1.7rem;
@@ -24,7 +34,7 @@
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: var(--font-size-1);
   font-family: "Karla", sans-serif;
   text-align: left;
   background: var(--body-bg);
