--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,9 +12,13 @@
     margin: 10.9rem 3rem;
 
     .drag-info {
-      text-align: center;
-      color: var(--text-color-1);
-      margin-top: 3.5rem;
+      display: none;
+      @include desktop {
+        display: block;
+        text-align: center;
+        color: var(--text-color-1);
+        margin-top: 3.5rem;
+      }
     }
 
     // checkbox
