--- a/src/styles/utils/_themes.scss
+++ b/src/styles/utils/_themes.scss
@@ -1,4 +1,4 @@
-:root[theme="dark"] {
+:root[data-theme="dark"] {
   --body-bg: #181824;
   --body-desktop-bg-img: url("../../images/bg-desktop-dark.jpg");
   --body-mobile-bg-img: url("../../images/bg-mobile-dark.jpg");
